<resources>
    <string name="app_name">DouSheng</string>
    <string name="movie_rank">Movie Rank</string>
    <string name="video_rank">Video Rank</string>
    <string name="art_rank">Art Rank</string>
    <string name="directors">Directors</string>
    <string name="areas">Areas</string>
    <string name="actors">Actors</string>
    <string name="item_name">Name</string>
    <string name="item_english_name">English Name</string>
    <string name="item_rank">Rank</string>
    <string name="item_release_date">Release Date</string>
    <string name="item_hot">Hot</string>
    <string name="discussion_hot">discussion Hot</string>
    <string name="topic_hot">topic Hot</string>
    <string name="search_hot">search Hot</string>
    <string name="influence_hot">influence Hot</string>
    <string name="tags">tags</string>
    <string name="item_poster">Poster</string>
    <string name="rank">Rank</string>
    <string name="video">Video</string>
    <string name="follow">Follow</string>
    <string name="fans">Fans</string>
    <string name="info">Info</string>
    <string name="avatar">Avatar</string>
    <string name="city">City</string>
    <string name="description">Description</string>
    <string name="gender">Gender</string>
    <string name="nickname">Nickname</string>
    <string name="title">Title</string>
    <string name="cover">Cover</string>
    <string name="time">Time</string>
    <string name="top">Top</string>
    <string name="count">Count</string>
    <string name="friend">Friend</string>
    <string name="is_follow">isFollow</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mutual_concern">Mutual concern</string>
    <string name="descriptionDefault">Always believe that good things are about to happen.</string>
    <string name="china">China</string>
    <string name="version">Version</string>
</resources>