<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/rank_item">
    <fragment
        android:id="@+id/friend_item"
        android:name="com.qxy.dousheng.ui.friend.FriendFragment"
        android:label="@string/friend"
        tools:layout="@layout/fragment_friend" />
    <fragment
        android:id="@+id/info_item"
        android:name="com.qxy.dousheng.ui.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/rank_item"
        android:name="com.qxy.dousheng.ui.rank.RankFragment"
        android:label="@string/rank"
        tools:layout="@layout/fragment_rank" />
    <fragment
        android:id="@+id/video_item"
        android:name="com.qxy.dousheng.ui.video.VideoFragment"
        android:label="@string/video"
        tools:layout="@layout/fragment_video" />
</navigation>